[metadata]
name = shdlc-sps30
version = attr:shdlc_sps30.VERSION
url = https://github.com/metebalci/sensirion-shdlc-sps30
author = Mete Balci
author_email = metebalci@gmail.com
license = GPLv3
description = SHDLC Driver for Sensirion SPS30
long_description_content_type = text/markdown
keywords = sensirion shdlc driver sps30
classifiers = 
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3 :: Only
  Topic :: System :: Hardware :: Hardware Drivers

[options]
zip_safe = False
include_package_data = True
packages = shdlc_sps30
install_requires = 
  sensirion_shdlc_driver
